<resources>
    <string name="app_name">필메이트</string>
    <string name="pill_check">복약체크</string>
    <string name="pill_stats">통계</string>
    <string name="pill_edit">약물관리</string>
    <string name="pill_search">약물검색</string>
    <string name="fab_add_medicine">약물 등록</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="next_button">다음</string>
    <string name="agreement_title">필메이트 약관 동의</string>
    <string name="agreement_subtitle">메이트 여러분들의 개인정보를 보호할게요</string>
    <string name="cb_1_text">(필수) 만 14세 이상이에요</string>
    <string name="cb_2_text">(필수) 서비스 이용약관 동의</string>
    <string name="cb_3_text">(필수) 개인정보 보호방침 동의</string>
    <string name="cb_4_text">(필수) 민감정보수집 및 이용동의</string>
    <string name="cb_5_text">(선택) 필메이트/복약 알림 동의</string>
    <string name="cb_5_desc">복약 알림, 복약 종료, 서비스 업데이트 등</string>
    <string name="cb_6_text">(선택) 마케팅 수신 동의</string>
    <string name="cb_6_desc">다양한 복약정보 및 프로모션 정보를 알려드려요.</string>
    <string name="cb_7_text">모두동의</string>
    <string name="cb_7_desc">약관 및 개인정보 보호방침, 마케팅 수신 동의</string>
    <string name="detail_view">상세보기</string>
    <string name="time_separator_colon">:</string>
    <string name="timepicker1_title">기상, 취침시간을\n알려주세요</string>
    <string name="timepicker1_subtitle">루틴에 맞는 복약시간을 알려드릴게요</string>
    <string name="timepicker2_title">식사시간을 알려주세요</string>
    <string name="timepicker2_subtitle">루틴에 맞는 복약시간을 알려드릴게요</string>
    <string name="label_wakeup">기상</string>
    <string name="label_sleep">취침</string>
    <string name="label_breakfast">아침식사</string>
    <string name="label_lunch">점심식사</string>
    <string name="label_dinner">저녁식사</string>
    <string name="default_wakeup_time">오전 8:00</string>
    <string name="default_sleep_time">오후 8:00</string>
    <string name="default_breakfast_time">오전 9:00</string>
    <string name="default_lunch_time">오후 12:00</string>
    <string name="default_dinner_time">오후 8:00</string>
    <string name="login_greeting">반갑습니다 메이트님!</string>
    <string name="login_subtitle">안전하고 편안한 복약관리\n필메이트가 함께합니다</string>
    <string name="login_kakao_button">카카오로 시작하기</string>
    <string name="setting_title">설정</string>
    <string name="section_personal">개인설정</string>
    <string name="section_alarm">알림</string>
    <string name="section_service">서비스</string>
    <string name="personal_routine_edit">개인루틴 변경</string>
    <string name="pillmate_alarm">필메이트/복약 알림</string>
    <string name="marketing_alarm">마케팅 알림</string>
    <string name="about_pillmate">필메이트에 대해</string>
    <string name="send_comment">의견 보내기</string>
    <string name="sign_out">탈퇴하기</string>
    <string name="logout">로그아웃</string>
    <string name="pillmate_alarm_description">복약 알림, 복약 종료, 서비스 업데이트 등</string>
    <string name="marketing_alarm_description">메이트님을 위한 마케팅 정보 등</string>
    <string name="success_title">루틴등록 완료!</string>
    <string name="success_subtitle">복약관리를 시작해볼까요?</string>
    <string name="ok_button">확인</string>
    <string name="logout_dialog_title">로그아웃 하시겠어요?</string>
    <string name="cancel_button">취소</string>
    <string name="confirm_logout_button">로그아웃</string>
    <string name="signout_dialog_title">탈퇴 하시겠어요?</string>
    <string name="signout_dialog_description">탈퇴하면 모든 정보가 삭제됩니다.\n그래도 탈퇴를 진행하시겠어요?</string>
    <string name="confirm_signout_button">탈퇴하기</string>
    <string name="routine_change_title">모든 약물의 복약 시간이\n다음날부터 변경됩니다</string>
    <string name="routine_change_description">개인 루틴을 변경하면, 등록된 모든 약물의\n복용 시간이 즉시 반영됩니다.</string>
    <string name="confirm_change_button">변경하기</string>
    <string name="alarm_permission_dialog_title">알림을 받으려면 권한이 필요해요</string>
    <string name="alarm_permission_dialog_description">‘설정 앱>앱 알림>알림 허용’을 켜주셔야\n알림을 받을 수 있어요.</string>
    <string name="alarm_permission_dialog_close">닫기</string>
    <string name="alarm_permission_dialog_setting">설정하기</string>
    <string name="no_active_medicine">복용중인 약물이 없어요</string>
    <string name="active_medicine_count_label">복용중인 약물 갯수</string>
    <string name="count">회</string>
    <string name="planned_medication">복약예정</string>
    <string name="no_registered_medicine">등록된 약물이 없어요</string>
    <string name="no_registered_medicine_sub">편리하게 복약관리를\n시작 해볼까요?</string>
    <string name="register_medicine_button">약물 등록하기</string>
    <string name="notice">공지</string>
    <string name="notification">알림</string>
    <string name="setting_routine_title">개인루틴 설정</string>
    <string name="done_button">완료</string>
    <string name="medicine_status_stopped">복용중지</string>
    <string name="edit_button">수정</string>
    <string name="stop_medication_button">복용중지</string>
    <string name="check_all_button">전체체크</string>
    <string name="routine_time_setting_title">해당 복용 시간대를 설정해주세요</string>
    <string name="label_fasting">공복</string>
    <string name="label_before_sleep">취침전</string>
    <string name="default_fasting_time">오전 7:00</string>
    <string name="default_before_sleep_time">오후 11:00</string>
    <string name="search_pharmacy">약국 검색</string>
    <string name="search_hospital">병원 검색</string>
    <string name="enter_pharmacy_name">약국명을 입력하세요</string>
    <string name="enter_hospital_name">병원명을 입력하세요</string>
    <string name="search_pill">약물 검색</string>
    <string name="enter_pill_name">약물명을 입력하세요</string>
    <string name="search_pill_none_title">약물 정보가 없나요?</string>
    <string name="search_pill_none_subtitle"><u>직접 입력할게요.</u></string>
    <string name="search_pill_none_subtitle_conflict">조금만 기다려 주세요!\n열심히 준비 중이에요 🛠️</string>
    <string name="exit_registration_title">약물 등록을 종료하시나요?</string>
    <string name="exit_registration_message">지금 종료하면 입력하신 내용이 사라져요.</string>
    <string name="exit_registration_confirm">계속하기</string>
    <string name="exit_registration_cancel">종료</string>
    <string name="pill_delete_title">스케줄에 등록된 약물을\n삭제하시겠어요?</string>
    <string name="pill_delete_btn_cancel">취소</string>
    <string name="pill_delete_btn_delete">삭제하기</string>
    <string name="duplicate_title">이미 복용 중인 약물이에요</string>
    <string name="duplicate_description">현재 복용 중인 약물은\n중복으로 등록할 수 없어요</string>
    <string name="duplicate_btn_back">돌아가기</string>
    <string name="duplicate_btn_detail">상세보기</string>
    <string name="poly_pharmacy_warning_title">5개 이상 약물을 복용 중이신가요?</string>
    <string name="poly_pharmacy_warning_description"> 5개 이상 약물을 복용하면,\n성분 간 충돌 가능성이 높아질 수 있어요.\n필요 시 전문가 상담을 권장드려요.</string>
    <string name="poly_pharmacy_warning_confirm">계속하기</string>
    <string name="poly_pharmacy_warning_home">홈으로</string>
    <string name="poly_pharmacy_warning_never">다시 보지 않기</string>
    <string name="poly_pharmacy_warning_3day">3일 동안 보지 않기</string>
    <string name="alarm_switch_title">복약 알림을 권장드려요!</string>
    <string name="alarm_switch_message">약물을 제시간에 섭취할 수 있도록 도울게요.</string>
    <string name="alarm_switch_cancel">아니요</string>
    <string name="alarm_switch_confirm">네, 설정할게요</string>
    <string name="pill_detail_title">등록하려는 약물이 맞나요?</string>
    <string name="pill_detail_class_name">약물분류명</string>
    <string name="pill_detail_pill_name">약물 이름</string>
    <string name="pill_detail_company_name">제약회사(주)</string>
    <string name="pill_detail_confirm">맞아요</string>
    <string name="pill_detail_cancel">아니에요</string>
    <string name="search_bottom_sheet_title">약국 검색</string>
    <string name="search_bottom_sheet_et">약국명을 입력하세요</string>
    <string name="search_bottom_sheet_recent">최근 검색어</string>
    <string name="search_bottom_sheet_clear_all">전체 삭제</string>
    <string name="select_days_title">요일을 선택해주세요</string>
    <string name="day_sunday">일</string>
    <string name="day_monday">월</string>
    <string name="day_tuesday">화</string>
    <string name="day_wednesday">수</string>
    <string name="day_thursday">목</string>
    <string name="day_friday">금</string>
    <string name="day_saturday">토</string>
    <string name="select_days_confirm">선택</string>
    <string name="select_times_title">1일 복용횟수를 선택해주세요</string>
    <string name="time_empty">공복</string>
    <string name="time_morning">아침</string>
    <string name="time_lunch">점심</string>
    <string name="time_dinner">저녁</string>
    <string name="time_before_sleep">취침전</string>
    <string name="select_times_confirm">%1$d회 선택</string>
    <string name="select_confirm">선택</string>
    <string name="select_meal_time">복용 시간대를 선택하세요</string>
    <string name="select_dosage_unit">투약 단위를 선택해주세요</string>
    <string name="select_volume_unit">투약 단위를 선택하세요</string>
    <string name="meal_time_before_meal">식전</string>
    <string name="meal_time_after_meal">식후</string>
    <string name="dosage_unit_tablet">정(개)</string>
    <string name="dosage_unit_capsule">캡슐</string>
    <string name="dosage_unit_ml">ml</string>
    <string name="dosage_unit_packet">포</string>
    <string name="dosage_unit_injection">주사</string>
    <string name="volume_unit_mg">mg</string>
    <string name="volume_unit_mcg">mcg</string>
    <string name="volume_unit_g">g</string>
    <string name="volume_unit_ml">ml</string>
    <string name="calendar_title">복약 시작일</string>
    <string name="calendar_month_year_format">%1$d년 %2$d월</string>
    <string name="confirm_title">입력하신 정보가 맞나요?</string>
    <string name="inquiry_title">처방받은 약국, 병원에서\n확인해보세요</string>
    <string name="inquiry_subtitle">복용하는 약물에 대한 정확한 정보가 중요해요.</string>
    <string name="pharmacy_name">약국명</string>
    <string name="pharmacy_address">약국 주소</string>
    <string name="hospital_name">병원명</string>
    <string name="hospital_address">병원 주소</string>
    <string name="btn_call">통화</string>
    <string name="medicine_registration_title">약물등록</string>
    <string name="medicine_registration_next">다음</string>
    <string name="medicine_registration_skip">건너뛰기</string>
    <string name="one_title">처방받은 약국, 병원의 정보를\n등록해주세요</string>
    <string name="one_sub_title">등록되어 있는 약물과 성분 충돌시,\n해당 정보를 통해 손쉽게 연락이 가능해요</string>
    <string name="one_tv_pharmacy">약국(필수)</string>
    <string name="one_et_pharmacy">약국 검색</string>
    <string name="one_tv_hospital">병원</string>
    <string name="one_et_hospital">병원 검색</string>
    <string name="one_warning">처방받은 약국을 등록해주세요.</string>
    <string name="two_title">어떤 약물을 등록할까요?</string>
    <string name="two_et_pill">약물 검색</string>
    <string name="three_title">복용 요일을 알려주세요</string>
    <string name="three_everyday">매일</string>
    <string name="four_title">복용 횟수를 알려주세요</string>
    <string name="four_et_count">1일 몇 회 복용하나요?</string>
    <string name="four_selected_time">%1$d회</string>
    <string name="five_title">복용 시간대를 알려주세요</string>
    <string name="five_meal_unit_after">식후</string>
    <string name="five_enter_minutes">분</string>
    <string name="five_default_minutes">30</string>
    <string name="five_immediately">즉시</string>
    <string name="five_when_taking">복용시</string>
    <string name="six_title">1회 투약량을 알려주세요</string>
    <string name="six_default_count">1</string>
    <string name="seven_title">복약 기간을 알려주세요</string>
    <string name="seven_start_date_label">복약 시작일</string>
    <string name="seven_period_label">복약일수</string>
    <string name="seven_enter_hint">숫자입력</string>
    <string name="seven_end_date_chip">종료일: %s</string>
    <string name="eight_title">1회 투여용량을 알려주세요</string>
    <string name="eight_volume_label">투여용량</string>
    <string name="eight_unit_label">단위</string>
    <string name="eight_tv_medicine_unit">단위선택</string>
    <string name="nine_title">복약 스케줄을 생성했어요!</string>
    <string name="nine_pill_title">등록중인 약물</string>
    <string name="nine_pill_dose">2정</string>
    <string name="nine_schedule_title">복약 스케줄</string>
    <string name="nine_alarm_setting">복약 알림 설정</string>
    <string name="nine_register_btn">등록</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="nine_no_medicine">약물 없음</string>
    <string name="nine_time_not_registered">등록되지 않음</string>
    <string name="nine_registration_data_insufficient">등록에 필요한 데이터가 부족합니다.</string>
</resources>