<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginStart="20dp"
        style="@style/T2_B20"
        android:textColor="@color/black"
        android:text="@string/select_days_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_days_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_sun"
            style="@style/DayButtonStyle"
            android:text="@string/day_sunday" />
        <Button
            android:id="@+id/btn_mon"
            style="@style/DayButtonStyle"
            android:text="@string/day_monday" />
        <Button
            android:id="@+id/btn_tue"
            style="@style/DayButtonStyle"
            android:text="@string/day_tuesday" />
        <Button
            android:id="@+id/btn_wed"
            style="@style/DayButtonStyle"
            android:text="@string/day_wednesday" />
        <Button
            android:id="@+id/btn_thu"
            style="@style/DayButtonStyle"
            android:text="@string/day_thursday" />
        <Button
            android:id="@+id/btn_fri"
            style="@style/DayButtonStyle"
            android:text="@string/day_friday" />
        <Button
            android:id="@+id/btn_sat"
            style="@style/DayButtonStyle"
            android:text="@string/day_saturday" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="26dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/select_days_confirm"
        style="@style/ButtonStyle1"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/ll_days_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>