<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_calendar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/calendar_title"
        style="@style/T2_B20"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_calendar_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/black"
        style="@style/H2_MD16"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_calendar_title"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_calendar_previous"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_previous"
        app:layout_constraintBottom_toBottomOf="@+id/tv_calendar_month"
        app:layout_constraintEnd_toStartOf="@id/iv_calendar_next"
        app:layout_constraintTop_toTopOf="@id/tv_calendar_month" />

    <ImageView
        android:id="@+id/iv_calendar_next"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_next"
        app:layout_constraintTop_toTopOf="@id/iv_calendar_previous"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_weekdays"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_calendar_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_sunday"
            android:textColor="@color/gray_1"
            style="@style/B2_RG14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_monday"
            android:textColor="@color/gray_1"
            style="@style/B2_RG14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_tuesday"
            android:textColor="@color/gray_1"
            style="@style/B2_RG14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_wednesday"
            android:textColor="@color/gray_1"
            style="@style/B2_RG14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_thursday"
            android:textColor="@color/gray_1"
            style="@style/B2_RG14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_friday"
            android:textColor="@color/gray_1"
            style="@style/B2_RG14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_saturday"
            android:textColor="@color/gray_1"
            style="@style/B2_RG14" />
    </LinearLayout>

    <!-- 캘린더 페이지 슬라이딩 (ViewPager2) -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_calendar"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/layout_weekdays"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_select_date" />

    <Button
        android:id="@+id/btn_select_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="26dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/select_confirm"
        style="@style/ButtonStyle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>