<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight_title"
        android:textColor="@color/black"
        style="@style/T1_B22"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_medicine_volume_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight_volume_label"
        android:textColor="@color/black"
        style="@style/B2_RG14"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/tv_medicine_unit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/eight_unit_label"
        android:textColor="@color/black"
        style="@style/B2_RG14"
        app:layout_constraintStart_toStartOf="@+id/layout_medicine_unit"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_medicine_volume"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_selector_edittext"
        android:inputType="number"
        android:padding="12dp"
        android:hint="@string/seven_enter_hint"
        android:textColorHint="@color/gray_2"
        style="@style/H2_MD16"
        app:layout_constraintTop_toBottomOf="@id/tv_medicine_volume_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/layout_medicine_unit" />

    <LinearLayout
        android:id="@+id/layout_medicine_unit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_edittext_gray_2"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_medicine_unit_label"
        app:layout_constraintBottom_toBottomOf="@+id/et_medicine_volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_medicine_volume">

        <TextView
            android:id="@+id/tv_medicine_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:hint="@string/eight_tv_medicine_unit"
            android:textColorHint="@color/gray_2"
            style="@style/H2_MD16"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/iv_dropdown"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_dropdown"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>