<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="320dp"
    android:minHeight="250dp"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:paddingHorizontal="16dp"
    android:background="@drawable/bg_dialog"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/iv_warning"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_warning_pink" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pill_delete_title"
        android:textColor="@color/black"
        style="@style/H1_B18"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/pill_delete_btn_cancel"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            style="@style/H2_MD16"
            android:background="@drawable/bg_btn_gray_2_stoke" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/pill_delete_btn_delete"
            android:stateListAnimator="@null"
            android:textColor="@color/white"
            style="@style/H2_MD16"
            android:background="@drawable/bg_btn_pink_1" />
    </LinearLayout>
</LinearLayout>